log
Thu 09 May 2024 03:04:55 PM UTC: 
 tests:  1|8
total_score: 0/70
b61e987
Thu 09 May 2024 03:09:29 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5990821
Thu 09 May 2024 03:14:02 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|6
total_score: 15/70
b28f316
Thu 09 May 2024 03:15:12 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|6
total_score: 15/70
8f39bcb
Thu 09 May 2024 03:32:05 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++---
 1 file changed, 24 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertarEnTreeMap’:
treemap.c:51:31: error: ‘TreeMap’ has no member named ‘raiz’
   51 |     if (arbol == NULL || arbol->raiz == NULL) return;
      |                               ^~
treemap.c:53:5: error: unknown type name ‘NodoArbol’
   53 |     NodoArbol *nuevoNodo = crearNodoArbol(clave, valor); // Crear un nuevo nodo con la clave y el valor dados
      |     ^~~~~~~~~
treemap.c:53:28: error: implicit declaration of function ‘crearNodoArbol’ [-Werror=implicit-function-declaration]
   53 |     NodoArbol *nuevoNodo = crearNodoArbol(clave, valor); // Crear un nuevo nodo con la clave y el valor dados
      |                            ^~~~~~~~~~~~~~
treemap.c:53:28: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:55:5: error: unknown type name ‘NodoArbol’
   55 |     NodoArbol *actual = arbol->raiz;
      |     ^~~~~~~~~
treemap.c:55:30: error: ‘TreeMap’ has no member named ‘raiz’
   55 |     NodoArbol *actual = arbol->raiz;
      |                              ^~
treemap.c:56:5: error: unknown type name ‘NodoArbol’
   56 |     NodoArbol *padre = NULL;
      |     ^~~~~~~~~
treemap.c:62:18: error: ‘TreeMap’ has no member named ‘esMenorQue’
   62 |         if (arbol->esMenorQue(clave, actual->par->clave)) {
      |                  ^~
treemap.c:62:44: error: request for member ‘par’ in something not a structure or union
   62 |         if (arbol->esMenorQue(clave, actual->par->clave)) {
      |                                            ^~
treemap.c:63:28: error: request for member ‘izquierda’ in something not a structure or union
   63 |             actual = actual->izquierda;
      |                            ^~
treemap.c:65:28: error: request for member ‘derecha’ in something not a structure or union
   65 |             actual = actual->derecha;
      |                            ^~
treemap.c:71:14: error: ‘TreeMap’ has no member named ‘esMenorQue’
   71 |     if (arbol->esMenorQue(clave, padre->par->clave)) {
      |              ^~
treemap.c:71:39: error: request for member ‘par’ in something not a structure or union
   71 |     if (arbol->esMenorQue(clave, padre->par->clave)) {
      |                                       ^~
treemap.c:72:14: error: request for member ‘izquierda’ in something not a structure or union
   72 |         padre->izquierda = nuevoNodo;
      |              ^~
treemap.c:74:14: error: request for member ‘derecha’ in something not a structure or union
   74 |         padre->derecha = nuevoNodo;
      |              ^~
cc1: all warnings being treated as errors
Compilation failed
d5682d8
Thu 09 May 2024 03:37:05 PM UTC: 
 treemap.c | 41 ++++++++++++++++++++---------------------
 1 file changed, 20 insertions(+), 21 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
e5cee57
Thu 09 May 2024 03:37:33 PM UTC: 
 treemap.c | 67 +++++++++++++++++++++++++--------------------------------------
 1 file changed, 26 insertions(+), 41 deletions(-)
 tests:  0|0
657075a
Thu 09 May 2024 03:38:15 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
10217bc
Thu 09 May 2024 03:43:39 PM UTC: 
 treemap.c | 18 ++++--------------
 1 file changed, 4 insertions(+), 14 deletions(-)
 tests:  11|6
total_score: 15/70
fec8f35
Thu 09 May 2024 03:45:54 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
a3cd4c6
Thu 09 May 2024 03:49:37 PM UTC: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
34cf1b6
Thu 09 May 2024 03:50:37 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
efe35fa
Thu 09 May 2024 03:51:35 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
76ac68d
Thu 09 May 2024 03:52:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
26e68fd
Thu 09 May 2024 03:53:23 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|6
total_score: 15/70
8ee06d5
Thu 09 May 2024 03:55:06 PM UTC: 
 treemap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  11|6
total_score: 15/70
ec055e2
Thu 09 May 2024 03:55:55 PM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  11|6
total_score: 15/70
a6bfb3e
Thu 09 May 2024 03:57:30 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
8f7e219
Thu 09 May 2024 03:57:37 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
e2b4f4b
Thu 09 May 2024 03:59:13 PM UTC: 
 treemap.c | 26 ++++++++++++++++----------
 1 file changed, 16 insertions(+), 10 deletions(-)
 tests:  11|6
total_score: 15/70
5394016
Thu 09 May 2024 04:00:00 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
c1c6e32
Sat 11 May 2024 12:23:31 AM UTC: 
 treemap.c | 34 ++++++++++++++++++----------------
 1 file changed, 18 insertions(+), 16 deletions(-)
 tests:  13|5
total_score: 15/70
10e0cad
